[package]
name = "oro-link-firmware"
description = "Oro Link firmware"
version = "0.0.0"
publish = false
edition = "2021"
authors = [ "Joshua Lee Junon <junon@oro.sh> (https://github.com/qix-)" ]
repository = "https://github.com/oro-os/oro-link-x86"
license = "MIT"
resolver = "2"

[features]
default = []

# Supported uC's
# NOTE: one uC model == one board variant.
stm32f479vg = [
	"stm32",
	"embassy-stm32/stm32f479vg",
	"is31fl3218",
	"enc28j60",
	"ssd1362",
	"helper-three-indicators",
	"helper-monitor-three-indicators-oled-256x64"
]

# Supported peripheral chips
# NOTE: don't use directly; only meant to be used by uC features
is31fl3218 = []
is31fl3218-gamma-correction = []
enc28j60 = ["embassy-net-enc28j60"]
ssd1362 = [
	"embedded-graphics",
	"embedded-graphics-framebuf",
	"embedded-graphics-core",
	"micromath"
]

# Chip types
# NOTE: don't use directly; only meant to be used by uC features
cortex-m = [
	"dep:cortex-m",
	"cortex-m-rt",
	"embassy-executor/arch-cortex-m"
]
stm32 = [
	"cortex-m",
	"embassy-stm32",
	"embedded-hal",
	"defmt-brtt"
]

# Helpers
# NOTE: don't use directly; only meant to be used by uC features
helper-three-indicators = []
helper-monitor-three-indicators-oled-256x64 = [
	"helper-three-indicators",
	"embedded-graphics",
	"embedded-graphics-core",
	"perlin2d",
	"oro-logo-64"
]
oro-logo-1024 = ["oro-logo-rle/oro-logo-1024"]
oro-logo-512 = ["oro-logo-rle/oro-logo-512"]
oro-logo-256 = ["oro-logo-rle/oro-logo-256"]
oro-logo-64 = ["oro-logo-rle/oro-logo-64"]
oro-logo-32 = ["oro-logo-rle/oro-logo-32"]

[dependencies]
cortex-m-rt = { version = "0.7.3", optional = true }
defmt = { version = "0.3.5", default-features = false }
defmt-brtt = { version = "0.1.1", features = ["async-await"], optional = true }
defmt-ringbuf = "0.2.0"
embassy-net-enc28j60 = { version = "0.1.0", optional = true, git = "https://github.com/oro-os/embassy.git", features = ["defmt"] }
embedded-graphics = { version = "0.8.0", optional = true }
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-graphics-framebuf = { version = "0.5.0", optional = true }
embedded-hal = { version = "1.0.0-alpha", optional = true }
embedded-hal-bus = "0.1.0-alpha.3"
heapless = "0.7.16"
micromath = { version = "2.0.0", optional = true }
static_cell = { version = "1.2.0", features = ["nightly"] }
perlin2d = { version = "0.2.6", path = "/src/oro-os/perlin2d", default-features = false, optional = true }
oro-logo-rle = { git = "https://github.com/oro-os/oro-logo-rle", version = "0.1.0", default-features = false }

[dependencies.cortex-m]
version = "0.7.7"
optional = true
features = [
	"critical-section-single-core",
	"inline-asm"
]

[dependencies.embassy-executor]
git = "https://github.com/oro-os/embassy.git"
features = [
	"defmt",
	"nightly",
	"integrated-timers",
	"executor-thread"
]

[dependencies.embassy-time]
git = "https://github.com/oro-os/embassy.git"
features = [
	"defmt",
	"nightly",
	"unstable-traits",
	"tick-hz-32_768"
]

[dependencies.embassy-stm32]
optional = true
git = "https://github.com/oro-os/embassy.git"
features = [
	"defmt",
	"nightly",
	"unstable-traits",
	"unstable-pac",
	"time-driver-any"
]

[dependencies.embassy-net]
git = "https://github.com/oro-os/embassy.git"
features = [
	"defmt",
	"nightly",
	"unstable-traits",
	"udp",
	"tcp",
	"dns",
	"dhcpv4",
	"proto-ipv6",
	"medium-ethernet",
	"medium-ip",
	"igmp",
]

[profile.release]
opt-level = 3       # Maximum optimizations
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# FIXME: For some reason, this causes the firmware not to boot.
#lto = "fat"        # Perform LTO across all crates
