[workspace.package]
version = "1.0.0"
authors = [ "Joshua Lee Junon <junon@oro.sh> (https://github.com/qix-)" ]
edition = "2021"
repository = "https://github.com/oro-os/link"
license = "MIT"

[workspace]
resolver = "2"

members = [
	"link-firmware-x86",
	"link-rpcapd",
	"link-daemon",
	"link-protocol",
	"link-protocol-binser",
	"link-protocol-binser-proc",
	"link-tftp-server",
	"link-test"
]

default-members = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3       # Maximum optimizations
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
lto = "fat"         # Perform LTO across all crates

[patch.crates-io]
smoltcp = { git = "https://github.com/oro-os/smoltcp.git" }
