[package]
name = "link-daemon"
description = "Oro Link CI/CD daemon"
version = "0.0.0"
edition = "2021"
publish = false
authors = [ "Joshua Lee Junon <junon@oro.sh> (https://github.com/qix-)" ]
repository = "https://github.com/oro-os/oro-link-x86"
license = "MIT"
resolver = "2"

[features]
default = ["stderr"]
stderr = ["dep:stderrlog"]
journald = ["dep:systemd-journal-logger"]

[dependencies]
link-protocol = { path = "../link-protocol", features = ["log", "async-std"] }
aes = "0.8.3"
async-io = "1.13.0"
async-std = { version = "1.12.0", features = ["attributes"] }
curve25519 = { git = "https://github.com/oro-os/curve25519-rs", version = "0.1.0" }
envconfig = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
stderrlog = { version = "0.5.4", optional = true }
heapless = "0.7.16"
hex = "0.4.3"
systemd-journal-logger = { version = "1.0.0", optional = true }
