[package]
name = "link-protocol-binser-proc"
description = "Procedural macros for the Oro Link protocol 'binser' serializer"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
defmt = { version = "0.3.5", default-features = false, optional = true }
