[package]
name = "link-protocol-binser"
description = "The Oro Link protocol 'binser' serializer"
publish = false
version = "0.1.0"
edition = "2021"

[features]
async-std = ["dep:async-std"]
embedded-io = ["dep:embedded-io-async"]

[dependencies]
link-protocol-binser-proc = { path = "../link-protocol-binser-proc" }
defmt = { version = "0.3.5", default-features = false, optional = true }
heapless = { version = "0.7.16", optional = true }
embedded-io-async = { version = "0.5.0", optional = true }
async-std = { version = "1.12.0", optional = true }
