[package]
name = "link-protocol"
description = "Protocol between the Oro Link and the daemon server"
publish = false
version = "0.1.0"
edition = "2021"

[features]
defmt = ["dep:defmt", "link-protocol-binser/defmt"]

[dependencies]
link-protocol-binser = { path = "../link-protocol-binser", features = ["heapless"] }
defmt = { version = "0.3.5", default-features = false, optional = true }
heapless = "0.7.16"
