[package]
name = "link-protocol"
description = "Protocol between the Oro Link and the daemon server"
publish = false
version = "0.1.0"
edition = "2021"

[features]
std = ["link-protocol-binser/std"]
defmt = ["dep:defmt", "link-protocol-binser/defmt", "heapless/defmt-impl"]
log = ["dep:log"]
embedded-io = ["channels", "link-protocol-binser/embedded-io"]
async-std = ["channels", "link-protocol-binser/async-std", "std"]
channels = ["dep:rand_core", "dep:aes", "dep:curve25519"]
thiserror = ["dep:thiserror", "link-protocol-binser/thiserror"]

[dependencies]
link-protocol-binser = { path = "../link-protocol-binser", features = ["heapless"] }
heapless = "0.7.16"
aes = { version = "0.8.3", optional = true }
rand_core = { version = "0.6.4", optional = true }
defmt = { version = "0.3.5", default-features = false, optional = true }
log = { version = "0.4.20", optional = true }
curve25519 = { git = "https://github.com/oro-os/curve25519-rs", optional = true }
thiserror = { version = "1.0.50", optional = true }
