[package]
name = "link-protocol-binser"
description = "The Oro Link protocol 'binser' serializer"
publish = false
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
std = []
async-std = ["std", "dep:async-std"]
embedded-io = ["dep:embedded-io-async"]
thiserror = ["dep:thiserror"]

[dependencies]
link-protocol-binser-proc = { path = "../link-protocol-binser-proc" }
defmt = { version = "0.3.5", default-features = false, optional = true }
heapless = { version = "0.7.16", optional = true }
embedded-io-async = { version = "0.5.0", optional = true }
async-std = { version = "1.12.0", optional = true }
thiserror = { version = "1.0.50", optional = true }
