[package]
name = "link-repl"
description = "Oro Link debug REPL"
publish = false
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
link-protocol = { path = "../link-protocol", features = ["log", "async-std", "thiserror"] }
aes = "0.8.3"
async-io = "1.13.0"
async-std = { version = "1.12.0", features = ["attributes"] }
curve25519 = { git = "https://github.com/oro-os/curve25519-rs", version = "0.1.0" }
envconfig = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
stderrlog = "0.5.4"
heapless = "0.8.0"
hex = "0.4.3"
thiserror = "1.0.50"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
url = "2.4.1"
surf = "2.3.2"
futures = "0.3.29"
mini_async_repl = "0.2.1"
