[package]
name = "link-test"
description = "Test CLI for use in GitHub Actions"
publish = false
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
link-protocol = { path = "../link-protocol", features = ["log", "async-std", "thiserror"] }
clap = { version = "4.4.5", features = ["derive"] }
thiserror = "1.0.50"
futures = "0.3.29"
rand = "0.8.5"
heapless = "0.7.16"
log = "0.4.20"
pretty_env_logger = "0.5.0"
async-tftp = { git = "https://github.com/oro-os/async-tftp-rs.git" }
