[package]
name = "link-tftp-server"
description = "Starts a TFTP server that handles TFTP requests from the link (and nothing else)"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
link-protocol = { path = "../link-protocol", features = ["log", "async-std", "thiserror"] }
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.5", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.50"
rand = "0.8.5"
heapless = "0.7.16"
hex = "0.4.3"
async-tftp = { git = "https://github.com/oro-os/async-tftp-rs.git" }
futures = "0.3.29"
