[package]
name = "oro-link-firmware"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# [features]
# default = []
# stm32f7 = [ "oro-link-stm32f7" ]
#
# [dependencies]
# oro-link-stm32f7 = { path = "../oro-link-stm32f7", optional = true }
