[package]
name = "oro-link-stm32f479"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "oro-link-stm32f479"
path = "src/main.rs"
test = false
bench = false

[dependencies]
oro-link-firmware = { path = "../oro-link-firmware" }
stm32f4xx-hal = { version = "0.17.1", features = [ "stm32f479" ] }
