[package]
name = "oro-link-stm32f7"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
oro-link-firmware = { path = "../oro-link-firmware" }
cortex-m = "0.6.1"
cortex-m-rt = { version = "0.6.10", features = [ "device" ] }
stm32f7 = { version = "0.8.0", features = [ "stm32f7x6", "rt" ] }
