[package]
name = "oro-link-stm32f7"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "oro-link-stm32f7"
path = "src/main.rs"
test = false
bench = false

[dependencies]
oro-link-firmware = { path = "../oro-link-firmware" }
stm32f7xx-hal = { version = "0.7.0", features = [ "stm32f756" ] }
